# OS

./: .gitignore  readme.md
OS_lab2/: CMakeLists.txt  OS_lab2.sln
OS_lab2/Child/: Child.cpp  Child.vcxproj
OS_lab2/Child/x64/Debug/: Child.exe.recipe  Child.ilk  vc143.idb
OS_lab2/Child/x64/Debug/Child.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Child.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OS_lab2/Parent/: Parent.cpp  Parent.vcxproj
OS_lab2/Parent/x64/Debug/: Parent.exe.recipe  Parent.ilk  vc143.idb
OS_lab2/Parent/x64/Debug/Parent.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  (+3 more)
OS_lab2/tests/: quicksort_test.cpp
lab6/: CMakeLists.txt  lab6.sln
lab6/lab6/: lab6.vcxproj  lab6.vcxproj.filters  os_lab6.cpp
lab6/lab6/x64/Debug/: os_lab6.exe.recipe  os_lab6.ilk  vc143.idb
lab6/tests/: logic_tests.cpp
os_lab4_Parent_try3/: CMakeLists.txt  os_lab4_Parent_try3.sln
os_lab4_Parent_try3/os_lab4_Child_try3/: os_lab4_Child_try3.cpp  os_lab4_Child_try3.vcxproj  os_lab4_Child_try3.vcxproj.filters
os_lab4_Parent_try3/os_lab4_Child_try3/x64/Debug/: Child.exe.recipe  Child.ilk  os_lab4_Child_try3.exe.recipe  os_lab4_Child_try3.ilk  vc143.idb
os_lab4_Parent_try3/os_lab4_Parent_try3/: os_lab4_Parent_try3.cpp  os_lab4_Parent_try3.vcxproj  os_lab4_Parent_try3.vcxproj.filters
os_lab4_Parent_try3/os_lab4_Parent_try3/x64/Debug/: Child.ilk  Parent.exe.recipe  Parent.ilk  vc143.idb
os_lab4_Parent_try3/tests/: logic_tests.cpp
os_lab5/: CMakeLists.txt  os_lab5.sln
os_lab5/Simple/: Simple.cpp  Simple.vcxproj  Simple.vcxproj.filters
os_lab5/Simple/x64/Debug/: Simple.exe.recipe  Simple.ilk  vc143.idb
os_lab5/os_lab5/: os_lab5.cpp  os_lab5.vcxproj
os_lab5/os_lab5/x64/Debug/: Server.exe.recipe  Server.ilk  vc143.idb
os_lab5/tests/: prime_tests.cpp
(+63 files in other folders)
